--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "main": "./main.js",
   "version": "1.0.0",
-  "author": "bgosrani",
+  "author": "bg",
   "scripts": {
     "start": "electron ."
   },
